# firebase-rust-sdk

./: .env.example  .gitignore  API_COMPARISON.md  AVAILABLE_APIS.md  CHANGELOG.md  CODEQL_ANALYSIS_PLAN.md  COMPLETION_STATUS.md  Cargo.toml  FIRESTORE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_MANUAL.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_READY.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_BRANCH.md  LICENSE  PERSISTENCE_DESIGN.md  PUBLISHING_GUIDE.md  QUERY_REFACTOR_PLAN.md  QUICKSTART.md  QUICK_SUMMARY.md  README.md  README.old.md  README_CODEQL.md  READY_TO_PORT.md  REFACTORING_PLAN.md  RELEASE_NOTES_v0.1.0-beta.1.md  RESEARCH_JOURNAL.md  RUST_PORTING_ANALYSIS.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  USING_LOCATIONS.md  analyze_dependencies.py  build.rs  cleanup_docs.sh  create_codeql_db.sh  create_db_direct.sh  create_db_final.sh  create_db_simple.sh  run_analysis.sh
.temp/: FIRESTORE_GRPC_PROOF.md
analysis_output/: SUMMARY.txt  implementation_plan.json
analysis_output/api_reports/: firebase_auth_AdditionalUserInfo_AdditionalUserInfo.json  firebase_auth_AdditionalUserInfo_operator=.json  firebase_auth_AdditionalUserInfo_~AdditionalUserInfo.json  firebase_auth_AuthResult_AuthResult.json  firebase_auth_AuthResult_operator=.json  firebase_auth_AuthResult_~AuthResult.json  firebase_auth_AuthStateListener_AuthStateListener.json  firebase_auth_AuthStateListener_OnAuthStateChanged.json  firebase_auth_AuthStateListener_operator=.json  firebase_auth_AuthStateListener_~AuthStateListener.json  firebase_auth_Auth_AddAuthStateListener.json  firebase_auth_Auth_AddIdTokenListener.json  firebase_auth_Auth_Auth.json  firebase_auth_Auth_CreateUserWithEmailAndPassword.json  firebase_auth_Auth_CreateUserWithEmailAndPasswordLastResult.json  firebase_auth_Auth_FetchProvidersForEmail.json  firebase_auth_Auth_FetchProvidersForEmailLastResult.json  firebase_auth_Auth_FetchProvidersResult_FetchProvidersResult.json  firebase_auth_Auth_FetchProvidersResult_operator=.json  firebase_auth_Auth_FetchProvidersResult_~FetchProvidersResult.json  firebase_auth_Auth_GetAuth.json  firebase_auth_Auth_RemoveAuthStateListener.json  firebase_auth_Auth_RemoveIdTokenListener.json  firebase_auth_Auth_SendPasswordResetEmail.json  firebase_auth_Auth_SendPasswordResetEmailLastResult.json  firebase_auth_Auth_SignInAndRetrieveDataWithCredential.json  firebase_auth_Auth_SignInAndRetrieveDataWithCredentialLastResult.json  firebase_auth_Auth_SignInAnonymously.json  firebase_auth_Auth_SignInAnonymouslyLastResult.json  firebase_auth_Auth_SignInWithCredential.json  firebase_auth_Auth_SignInWithCustomToken.json  firebase_auth_Auth_SignInWithCustomTokenLastResult.json  firebase_auth_Auth_SignInWithEmailAndPassword.json  firebase_auth_Auth_SignInWithEmailAndPasswordLastResult.json  firebase_auth_Auth_SignInWithProvider.json  firebase_auth_Auth_SignOut.json  firebase_auth_Auth_UseAppLanguage.json  firebase_auth_Auth_UseEmulator.json  firebase_auth_Auth_app.json  firebase_auth_Auth_current_user.json  (+359 more)
benches/: README.md  firestore_bench.rs
codeql_queries/: class_hierarchy.ql  field_dependencies.ql  include_dependencies.ql  method_dependencies.ql  public_api_methods.ql  qlpack.yml  return_type_dependencies.ql  type_dependencies.ql
codeql_results/: class_hierarchy.csv  field_dependencies.csv  include_dependencies.csv  method_dependencies.csv  public_api_methods.csv  return_type_dependencies.csv  type_dependencies.csv
docs/: GETTING_STARTED.md  README.md
src/: app.rs  error.rs  implementation_tracker.rs  lib.rs
src/auth/: auth.rs  auth.rs.bak  auth.rs.bak2  types.rs
src/firestore/: aggregate_query.rs  collection_reference.rs  document_reference.rs  document_snapshot.rs  field_value.rs  firestore.rs  firestore.rs.bak5  firestore_rest_old.rs.bak  geo_point.rs  listener.rs  metadata_changes.rs  mod.rs  query.rs  query_old.rs  query_snapshot.rs  settings.rs  snapshot_stream.rs  timestamp.rs  transaction.rs  types.rs  write_batch.rs
tests/: auth_integration.rs  auth_integration.rs.bak4  firestore_integration.rs  firestore_integration.rs.bak3
