[package]
name = "firebase-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Firebase Rust Contributors"]
description = "Idiomatic Rust port of Firebase C++ SDK (Auth + Firestore)"
license = "Apache-2.0"
repository = "https://github.com/yourusername/firebase-rust-sdk"
keywords = ["firebase", "auth", "firestore", "async"]
categories = ["authentication", "database", "api-bindings"]

[features]
default = []
tracker = []  # Enable implementation status tracking

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
