[package]
name = "firebase-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Firebase Rust Contributors"]
description = "Idiomatic Rust port of Firebase C++ SDK (Auth + Firestore)"
license = "Apache-2.0"
repository = "https://github.com/cwahn/firebase-rust-sdk.git"
keywords = ["firebase", "auth", "firestore", "async"]
categories = ["authentication", "database", "api-bindings"]

[features]
default = []
tracker = []           # Enable implementation status tracking
integration-tests = [] # Enable integration tests with real Firebase

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
rand = "0.8"
uuid = { version = "1.11", features = ["v4"] }

# gRPC for listeners (cross-platform)
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-webpki-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
h2 = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client = "0.6"

[build-dependencies]
tonic-build = "0.12"
ureq = "2.10"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"   # Load .env file for integration tests
